--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="아이들 - 프로필 링크">   
     <meta property="og:description" content="어서와 아이들은 처음이지?">
     <meta property="text/javascript" src="./(G)I-DLE.jpg"> 
-    <title>르탄이 - 프로필 링크</title>
+    <title>아이들 - 프로필 링크</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
         * {
