--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     우리가 집을 위해 미리 생각 해놓은 것을 적어두는 곳이라고 할 수 있죠!-->
     <meta property="og:title" content="아이들 - 프로필 링크">   
     <meta property="og:description" content="어서와 아이들은 처음이지?">
-    <meta property="text/javascript" src="./(G)I-DLE.jpg"> 
+    <meta property="text/javascript" src="./여자아이들.jpg"> 
     <title>아이들 - 프로필 링크</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
@@ -24,7 +24,7 @@
 
             border: 2px solid white;
 
-            background-image: url(./\(G\)I-DLE.jpg);
+            background-image: url(./여자아이들.jpg);
             background-position: center;
             background-size: cover;
         }
