--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     우리가 집을 위해 미리 생각 해놓은 것을 적어두는 곳이라고 할 수 있죠!-->
     <meta property="og:title" content="아이들 - 프로필 링크">   
     <meta property="og:description" content="어서와 아이들은 처음이지?">
-    <meta property="og:image" content="./여자아이들.jpg">
+    <meta property="og:image" content="여자아이들.jpg">
     <title>아이들 - 프로필 링크</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
