--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             border: 2px solid white;
 
-            background-image: url(./여자아이들.jpg);
+            background-image: url('여자아이들.jpg');
             background-position: center;
             background-size: cover;
         }
